--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,14 @@ body {
 
 header {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     height: 90px;
 }
 
 h1 {
-    color: #901C1C;
-    margin-right: 100px;
+    color: #d3573c;
+    margin-right: 45px;
 }
 
 .logo {
@@ -28,11 +27,11 @@ h1 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .photographer_section article {
-    justify-self: center;
+    justify-content: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,9 +41,32 @@ h1 {
 .photographer_section article h2 {
     color: #D3573C;
     font-size: 36px;
+
 }
 
 .photographer_section article img {
     height: 200px;
     width: 200px;
+    border-radius: 100%;
+    transition: all 500ms;
+    object-fit: cover;
+}
+
+.photographer_section article p {
+    line-height: 1.5;
+    text-align: center;
+    margin: 0;
+}
+
+.photographer_section article span {
+    color: #901c1c;
+    font-weight: 500;
+}
+
+.photographer_section article a {
+    text-decoration: none;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	line-height: 0px
 }
