--- a/css/photographer.css
+++ b/css/photographer.css
@@ -10,7 +10,7 @@
   height: 300px;
   margin: 0 100px;
 }
-  
+
 .photograph-header article {
   display: flex;
   align-items: center;
@@ -18,12 +18,12 @@
   height: 100%;
   margin: 0 40px;
 }
-  
+
 .photograph-header article * {
   line-height: 1.8;
   margin: 0;
 }
-  
+
 .photograph-header article img {
   height: 200px;
   width: 200px;
@@ -31,12 +31,12 @@
   object-fit: cover;
   transition: all 500ms;
 }
-  
+
 .photograph-header article h1 {
   color: #db8876;
   font-size: 64px;
 }
-  
+
 .photograph-header article span {
   color: #901c1c;
   font-size: 24px;
@@ -76,21 +76,25 @@
   background-color: rgba(26, 39, 156, 0.4);
 }
 
+/* Styles pour la boîte de dialogue */
 .modal {
   border-radius: 5px;
-  background-color: #DB8876;
+  background-color: #db8876;
   width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   padding: 35px;
-  margin: auto;
+  margin: 50px auto;
 }
 
+/* Styles pour l'en-tête de la boîte de dialogue */
 .modal header {
   justify-content: space-between;
+  align-items: flex-start;
   width: 100%;
+  height: 100%;
 }
 
 .modal header img {
@@ -98,12 +102,19 @@
 }
 
 .modal header h2 {
-  font-size: 64px;
+  font-size: 60px;
   font-weight: normal;
-  text-align: center;
+  margin: 0 0 15px 0;
 }
 
+/* Classe pour désactiver le défilement de la page */
+.no-scroll {
+  overflow: hidden;
+}
+
+/* Styles pour le formulaire */
 form {
+  position: relative;
   display: flex;
   width: 100%;
   flex-direction: column;
@@ -111,7 +122,7 @@ form {
 }
 
 form label {
-  color: #312E2E;
+  color: #312e2e;
   font-size: 36px;
 }
 
@@ -120,12 +131,75 @@ form div {
   flex-direction: column;
   width: 100%;
   align-items: self-start;
-  margin-bottom: 26px;
 }
 
-form input {
+form .text-control {
   width: 100%;
   height: 68px;
   border: none;
   border-radius: 5px;
+}
+
+form input {
+  font-size: 24px;
+}
+
+form #request {
+  height: 120px;
+  font-size: 24px;
+}
+
+/* Styles pour l'affichage des messages d'erreur */
+.form-data::after {
+  content: attr(data-error);
+  font-size: 24px;
+  color: #901c1c;
+  display: block;
+  margin-bottom: 10px;
+  float: right;
+  line-height: 1;
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.form-data[data-visible="true"]::after {
+  opacity: 1;
+}
+
+.form-data[data-visible="true"] .text-control {
+  border: 2px solid #901c1c;
+}
+
+/* Styles pour la carte de coût */
+.cost-card {
+  position: sticky;
+  bottom: 0;
+  background: #db8876;
+  float: right;
+  padding: 20px;
+  font-size: 24px;
+  font-weight: 500;
+  border-radius: 5px;
+  margin: 0 25px;
+  min-width: 350px;
+}
+
+.cost-card p {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+}
+
+/* Styles pour le champ de remerciement */
+.thanks-field {
+  display: none;
+  position: absolute;
+  top: 40%;
+  left: 20%;
+  font-size: 2rem;
+}
+
+/* Classe pour désactiver l'opacité */
+.disabled {
+  opacity: 0;
 }
